Revision history for Perl distribution PathTools.

3.07

 - We now avoid modifying @_ in tmpdir() when it's not strictly
   necessary, which reportedly provides a modest performance
   boost. [Richard Soderberg]

3.06  Wed Apr 13 20:47:26 CDT 2005
 
 (No changes in functionality)

 - Added a note to the canonpath() docs about why it doesn't collapse
   foo/../bar sections.

 - The internal-only function bsd_realpath() in the XS file now uses
   normal arg syntax instead of K&R syntax. [Nicholas Clark]

3.05  Mon Feb 28 07:22:58 CST 2005

 - Fixed a bug in fast_abs_path() on Win32 in which forward- and
   backward-slashes were confusing things. [demerphq]

 - Failure to load the XS code in Cwd is no longer a fatal error
   (though failure to compile it is still a fatal error in the build
   process).  This lets Cwd work under miniperl in the core. [Rafael
   Garcia-Suarez]

 - In the t/cwd.t test, don't enforce loading from blib/ if we're
   testing in the perl core. [Rafael Garcia-Suarez]

3.04  Sun Feb  6 17:27:38 CST 2005

 - For perls older than 5.006, the HAS_GETCWD symbol is not available,
   because it wasn't checked for in older Configure scripts when perl
   was built.  We therefore just ask the user whether the getcwd() C
   function is defined on their platform when their perl is old.
   Maybe in the future we'll try to automate this. [Reported by
   several parties]

 - Remove lib/ppport.h from the distribution, so that MakeMaker
   doesn't accidentally pick it up and install it as a lib
   file. [Jerry Hedden]

 - Fixed a testing error on VMS that occurred when a user had
   read-access to the root of the current volume. [Craig A. Berry]

3.03  Fri Jan 21 21:44:05 CST 2005

 - Fixed a testing error if the first file we find in the root
   directory is a symlink. [Blair Zajac]

 - Added a test to make sure Cwd.pm is loaded from blib/ during
   testing, which seems to be an issue in some people's environments