@@ -14,7 +14,7 @@ chdir 't';
 
 use File::Spec;
 use lib File::Spec->catdir('t', 'lib');
-use Test::More tests => 16;
+use Test::More tests => 17;
 
 use Scalar::Util qw/tainted/;
 
@@ -30,3 +30,6 @@ foreach my $func (@Functions) {
     is( $@, '',		"$func() should not explode under taint mode" );
     ok( tainted($cwd),	"its return value should be tainted" );
 }
+
+# Previous versions of Cwd tainted $^O
+is !tainted($^O), 1, "\$^O should not be tainted";
